--- a/environment-gpu.yml
+++ b/environment-gpu.yml
@@ -4,18 +4,18 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
-  - pip>=19.0.3
-  - matplotlib>=3.1.2
-  - opencv>=4.1
-  - pandas>=0.25.3
-  - pytorch>=1.3.1
-  - requests=2.22.0
-  - scikit-image>=0.16.2
-  - scipy>=1.3.2
-  - torchvision>=0.5.0
+  - python
+  - pip
+  - matplotlib
+  - opencv
+  - pandas
+  - pytorch
+  - requests
+  - scikit-image
+  - scipy
+  - torchvision
   - cudatoolkit=9.2
-  - tqdm>=4.40.0
-  - urllib3>=1.25.7
+  - tqdm
+  - urllib3
   - tensorflow-gpu=1.15
   - cuda100
